# context-infra-loop

./: .env.example  .gitignore  AGENTS.md  README.md  pyrightconfig.json  setup_guide.md
adhoc_jobs/tavily_skill/: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
adhoc_jobs/tavily_skill/docs/: prd.md  rfc.md  test.md  working.md
adhoc_jobs/tavily_skill/scripts/: run_cli.sh
adhoc_jobs/tavily_skill/skills/: skill_tavily.md
adhoc_jobs/tavily_skill/src/tavily_skill/: __init__.py  __main__.py  cli.py
adhoc_jobs/tavily_skill/tests/: test_cli.py
contexts/loop_runs/: README.md
contexts/memory/: OBSERVATIONS.md
docs/: CRONTAB.md  SKILL_ECOSYSTEM.md
rules/: COMMUNICATION.md  SOUL.md  USER.example.md  WORKSPACE.md
rules/axioms/: INDEX.md  a01_ask_do_paradigm.md  a02_multiplier_not_replacement.md  a03_ic_to_manager.md  a04_reliability_management.md  a05_docs_long_term_memory.md  a06_framework_worldview.md  a07_design_philosophy_ceiling.md  a08_prompt_quality_lever.md  a09_builders_mindset_moat.md  a10_rapport_over_raw_intelligence.md  a11_tool_composition_as_capability_expansion.md  a12_ai_native_development_paradigm.md  a13_tech_adoption_stages.md  m01_closed_loop_calibration.md  m02_reverse_debug_mindset.md  m03_quantified_prioritization.md  m04_active_management_over_tool_mentality.md  m05_simplicity_cognitive_efficiency.md  (+25 more)
tools/: ga4_metrics.py  kit_metrics.py  opencode_job.py  pytest.ini  requirements.txt  send_email_to_myself.py  share_report.css  share_report_ga4.html  share_report_tts.html  typefully_metrics.py  typefully_post.py
(+48 files in other folders)
